added login/signup pages

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,8 @@
 <form action='/login' method='post'>
     <h3> Login </h3>
     <p>
-        <label> Username: </label>
-        <input type='text' name='username' id='username'> 
+        <label> Email: </label>
+        <input type='text' name='email' id='email'> 
     </p>
     <p>
         <label> Password: </label> 
