--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,17 +11,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/stylesheets/main.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <div class="wrapper">
 
         <%= yield %>
 
-      <footer class="branding">
-        <small>&copy; 2020 <strong>MyReadingRepo</strong></small>
-      </footer>
     </div>
+
+      <div class="footer">
+        <small>&copy; 2020 <strong>MyReadingRepo</strong></small>
+      </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <!--[if lt IE 7]>
