--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,4 @@
-<form action='/login' method='post'>
+<%# <form action='/login' method='post'>
     <h3> Login </h3>
     <p>
         <label> Email: </label>
@@ -9,4 +9,25 @@
         <input type='password' name='password' id='password'>
     </p>
     <input type='submit' value='Submit' name='submit'> <br>
-</form>
+</form> %>
+
+<div class="inner">
+    <form action='/login' method='post'>
+    <header> <img class="center" src="images/logo-mrr.png"></header>
+        <h3>Login</h3>
+        <label class="form-group">
+        <input type='text' name='email' id='email' class="form-control" required>
+        <span>Email</span>
+        <span class="border"></span>
+        </label>
+        <label class="form-group">
+            <input type='password' name='password' id='password' class="form-control"  required>
+            <span for="">Password</span>
+            <span class="border"></span>
+        </label>
+        <button type='submit'> Submit
+            <i class="zmdi zmdi-arrow-right"></i>
+        </button>
+    </form> <br>
+    <p> Don't have an account? <a href="/signup">Sign Up</a> here. </p>
+</div>
