--- a/app/views/books/lists.erb
+++ b/app/views/books/lists.erb
@@ -1,10 +1,36 @@
-<h2> Welcome, <%=@current_user.email%> </h2>
+<style>
 
-<h3> Here are the latest tweets: </h3>
-<%@books.each do |books|%>
-    <%=books.title%> <br> <br>
-<%end%>
+.topright {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-size: 18px;
+    background-color: #39459b;
+}
 
-<h2> Your Lists: </h2>
+.create {
+    padding: 10px;
+    font-size: 18px;
+    text-align: center;
+    border: 5px solid gray;
+    margin: auto;
+    width: 50%;
+    background-color: #39459b;
+    position: fixed;
+    top: 10%;
+    left: 25%;
+}
+
+</style>
+
+<div class="topright">
+    Welcome, <%=@current_user.email%> 
+</div>
+
+<div class="create">
+    Click <a href="/create"> here</a> to add a new book to one of your lists!
+</div>
+
+<%# <h2> Your Lists: </h2>
 <h3> Click <a href="/readlist"> here </a> to see books you've added to your readlist! <h3>
-<h3> Click <a href="/toplist"> here </a> to see your top-rated books! <h3>
+<h3> Click <a href="/toplist"> here </a> to see your top-rated books! <h3> %>
