--- a/app/views/books/lists.erb
+++ b/app/views/books/lists.erb
@@ -28,9 +28,11 @@
 </div>
 
 <div class="create">
-    Click <a href="/create"> here</a> to add a new book to one of your lists!
+    Click <a href="/books/new"> here</a> to add a new book to one of your lists!
 </div>
 
-<%# <h2> Your Lists: </h2>
-<h3> Click <a href="/readlist"> here </a> to see books you've added to your readlist! <h3>
-<h3> Click <a href="/toplist"> here </a> to see your top-rated books! <h3> %>
+<h2> Your Lists: </h2>
+<p> Click <a href="/readlist"> here </a> to see books you've added to your readlist! </p>
+<p> Click <a href="/toplist"> here </a> to see your top-rated books! </p>
+<p> Click <a href="/worstlist"> here </a> to see your worst-rated books! </p>
+
