--- a/app/views/books/create.erb
+++ b/app/views/books/create.erb
@@ -1,9 +1,33 @@
-<form action='/books' method="post">
-
-  <h4> Create Your Tweet: </h4>
-  <input name='title'> <br> <br>
-  <input name='author'> <br> <br>
-  <input name='genre'> <br> <br>
-  <input type="submit" id="submit">
-  
-</form>
+<div class="inner">
+<form action='/books' method='post'>
+    <h2>Add Book Details Below</h2> <br>
+    <label class="form-group">
+      <input type='text' name='title' id='title' class="form-control" required>
+      <span>Title</span>
+      <span class="border"></span>
+    </label>
+    <label class="form-group">
+      <input type='text' name='author' id='author' class="form-control"  required>
+      <span for="">Author</span>
+      <span class="border"></span>
+    </label>
+    <label class="form-group">
+      <input type='text' name='genre' id='genre' class="form-control"  required>
+      <span for="">Genre</span>
+      <span class="border"></span>
+    </label>
+    <label class="form-group">
+      <span for="list">Select List:</span><br><br>
+      <input type="radio" id="favorite" name="list" value="Favorite">
+      <label for="favorite">Favorite List</label><br>
+      <input type="radio" id="reading" name="list" value="Reading">
+      <label for="reading">Reading List</label><br>
+      <input type="radio" id="worst" name="list" value="Worst">
+      <label for="worst">Worst List</label>
+      <span class="border"></span>
+    </label>
+    <button type='submit'> Submit
+      <i class="zmdi zmdi-arrow-right"></i>
+    </button>
+  </form> <br>
+</div>
