--- a/app/views/books/top.erb
+++ b/app/views/books/top.erb
@@ -1,5 +1,5 @@
 <h4> Here are is your readlist: </h4>
-<%current_user.books.each_with_index do |books, index|%>
+<%@list.each_with_index do |books, index|%>
     <%indexplusone = index + 1%>
-    <%=indexplusone%>. <%=books.title%> - <%=books.author%> (<%=books.genre%> )
+    <a href='/books/<%=books.id%>'> <%=indexplusone%>. <%=books.title%> - <%=books.author%> (<%=books.genre%>) </a> <br>
 <%end%>
