--- a/app/views/books/update.erb
+++ b/app/views/books/update.erb
@@ -3,27 +3,27 @@
     <h2>Edit Book Details Below</h2> <br>
     <input id="hidden" type="hidden" name="_method" value="PATCH">
     <label class="form-group">
-      <input type='text' name='title' id='title' class="form-control" required>
+      <input type='text' name='book[title]' id='title' class="form-control" required>
       <span>Title</span>
       <span class="border"></span>
     </label>
     <label class="form-group">
-      <input type='text' name='author' id='author' class="form-control"  required>
+      <input type='text' name='book[author]' id='author' class="form-control"  required>
       <span for="">Author</span>
       <span class="border"></span>
     </label>
     <label class="form-group">
-      <input type='text' name='genre' id='genre' class="form-control"  required>
+      <input type='text' name='book[genre]' id='genre' class="form-control"  required>
       <span for="">Genre</span>
       <span class="border"></span>
     </label>
     <label class="form-group">
       <span for="list">Select List:</span><br><br>
-      <input type="radio" id="favorite" name="list" value="Favorite">
+      <input type="radio" id="favorite" name="book[list]" value="Favorite">
       <label for="favorite">Favorite List</label><br>
-      <input type="radio" id="reading" name="list" value="Reading">
+      <input type="radio" id="reading" name="book[list]" value="Reading">
       <label for="reading">Reading List</label><br>
-      <input type="radio" id="worst" name="list" value="Worst">
+      <input type="radio" id="worst" name="book[list]" value="Worst">
       <label for="worst">Worst List</label>
       <span class="border"></span>
     </label>
