finalizing edit and delete pages

--- a/app/views/books/lists.erb
+++ b/app/views/books/lists.erb
@@ -81,9 +81,9 @@ button.c {
 </form>
 
 <form action="/toplist">
-  <button class='b'> <p> Top List </p> </button>
+  <button class='b'> <img src='/images/star.png'> <p> Top List </p> </button>
 </form>
 
 <form action="/worstlist">
-  <button class='c'> <p> Worst List </p> </button>
+  <button class='c'> <img src='/images/dislike.png' width=80%><p> Worst List </p> </button>
 </form>
