--- a/app/views/books/readlist.erb
+++ b/app/views/books/readlist.erb
@@ -1,42 +1,65 @@
 <style>
-li {
-    display: flex;
-    background: rgba(255,255,255,.1);
-    padding: 10px 20px;
-    color: #fff;
-    margin: 5px 0;
-    transition: .5s;
+.topright {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-size: 18px;
+    text-align: right;
 }
 
-li:nth child(1){
-    background: rgba(255,255,255,.6);
+#books td, #books th {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align:center;
+  width: 200px;
 }
 
-li:nth child(2){
-    background: rgba(255,255,255,.4);
+#books tr:nth-child(even){
+    background-color: #39459b;
 }
 
-li:nth child(3){
-    background: rgba(255,255,255,.2);
+#books tr:hover {
+    background-color: #ddd;
 }
 
-span.position-data {
-    vertical-align: top;
+#books th {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  text-align: center;
+  background-color: #4CAF50;
+  color: white;
+}
+
+table.center {
+  margin-left: auto; 
+  margin-right: auto;
+  width: auto;
+}
+
+a {
+  color: white;
 }
 </style>
 
-<span class='position-data'>
-    <h4> Here are is your readlist: </h4> <br>
-    <%@list.each_with_index do |book, index|%>
-        <ol>
-            <li> 
+<div class="topright">
+    <a href="/books"> Homepage </a>
+</div>
+
+
+    <table id="books" class="center">
+        <tr>
+            <th>#</th>
+            <th>Title</th>
+            <th>Author</th>
+            <th>Genre</th>
+        </tr>
+        <%@list.each_with_index do |book, index|%>
+            <tr>
                 <%indexplusone = index + 1%>
-                <span class='number'> <%=indexplusone%>. </span>
-                <span> <a href='/books/<%=book.id%>'><%=book.title%></a> </span>
-                <span> <%=book.author%> </span>
-                <span> <%=book.genre%> </span>
-                <span> <i class="fa fa-book"></i> 
-            </li>
-        </ol>
-    <%end%>
-<span>
+                <td> <%=indexplusone%>. </td> 
+                <td> <a href='/books/<%=book.id%>'> <%=book.title%></a> </td> 
+                <td> <%=book.author%> </span> </td> 
+                <td> <%=book.genre%> </span> </td> 
+            </tr>
+        <%end%>
+    </table>
