fix issue with edit and add page lists

--- a/app/views/books/read.erb
+++ b/app/views/books/read.erb
@@ -36,7 +36,24 @@ button.edit {
     left: 25%;
     background-color: #39459b;
 }
+
+.topright {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-size: 18px;
+    text-align: right;
+}
+
+a {
+  color: white;
+}
 </style>
+  
+  <div class="topright">
+    <a href="/books"> Homepage </a>
+  </div>
+  
 <span>
   <h3> 
     <%=@book.title%> <br> by <%=@book.author%> 
