--- a/app/views/books/update.erb
+++ b/app/views/books/update.erb
@@ -19,11 +19,13 @@
     </label>
     <label class="form-group">
       <span for="list">Select List:</span><br><br>
-      <input type="radio" id="favorite" name="book[list]" value="Favorite">
-      <label for="favorite">Favorite List</label><br>
-      <input type="radio" id="reading" name="book[list]" value="Reading">
-      <label for="reading">Reading List</label><br>
-      <input type="radio" id="worst" name="book[list]" value="Worst">
+      <input type="radio" id="favorite" name="book[list]" value="Favorite" required>
+      <label for="favorite">Favorite List</label>
+
+      <input type="radio" id="reading" name="book[list]" value="Reading" required>
+      <label for="reading">Reading List</label>
+
+      <input type="radio" id="worst" name="book[list]" value="Worst" required>
       <label for="worst">Worst List</label>
       <span class="border"></span>
     </label>
