--- a/app/views/books/create.erb
+++ b/app/views/books/create.erb
@@ -18,12 +18,14 @@
     </label>
     <label class="form-group">
       <span for="list">Select List:</span><br><br>
-      <input type="radio" id="favorite" name="list" value="Favorite">
-      <label for="favorite">Favorite List</label><br>
-      <input type="radio" id="reading" name="list" value="Reading">
-      <label for="reading">Reading List</label><br>
-      <input type="radio" id="worst" name="list" value="Worst">
-      <label for="worst">Worst List</label>
+      <input type="radio" id="Favorite" name="list" value="Favorite" required> 
+      <label for=""> Favorite List  </label>
+
+      <input type="radio" id="Reading" name="list" value="Reading" required> 
+      <label for=""> Reading List</label>
+      
+      <input type="radio" id="Worst" name="list" value="Worst" required> 
+      <label for=""> Worst List</label>
       <span class="border"></span>
     </label>
     <button type='submit'> Submit
