--- a/app/views/books/read.erb
+++ b/app/views/books/read.erb
@@ -66,5 +66,5 @@ a {
 </form>
 
 <form action="/books/<%=@book.id%>/edit">
-  <button class='edit' type="submit"> Edit Book Details</button>
+  <button class='edit' type="submit"> Click Here to Edit Book Details</button>
 </form>
